修改file上传和数据库源

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.mvc.static-path-pattern=/static/**
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://1.94.103.66:3306/test
-spring.datasource.username=jie
-spring.datasource.password=03082400
+spring.datasource.url = jdbc:mysql://8.130.19.165:3306/lib_service
+spring.datasource.username = root
+spring.datasource.password = rukdu2-mUpcaj-wyjhiq
 
 # Druid specific settings
 spring.datasource.druid.initial-size=5
