进行了拦截，需要直接访问api要在securityConfig上加上对应api

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -30,5 +30,8 @@ spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
 
 uploadPathImg = demo/src/main/resources/static/PDFs/
 
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
+
 server.port=8088
 
