--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=LM
-spring.servlet.multipart.max-file-size=500MB
-spring.servlet.multipart.max-request-size=500MB
+spring.servlet.multipart.max-file-size=500000MB
+spring.servlet.multipart.max-request-size=500000MB
 
 spring.data.mongodb.database=LM
 spring.data.mongodb.uri=mongodb://localhost/LM
