上传epub和excel功能实现

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -30,6 +30,7 @@ spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
 
 MarcUploadPath = demo/src/main/resources/static/Marc/
 PDFUploadPath = demo/src/main/resources/static/PDFs/
+EPUBUploadPath = demo/src/main/resources/static/EPUBs/
 
 server.port=8088
 
